fix map view alignment

--- a/views/gallery-view/components/polaroid/base-polaroid/base-polaroid.css
+++ b/views/gallery-view/components/polaroid/base-polaroid/base-polaroid.css
@@ -24,6 +24,14 @@
   height: 235px;
 }
 
+.polaroid-img.blank {
+  background-color: rgb(220 220 220);
+  font-size: var(--lrg-text-size);
+  text-align: center;
+  padding: 15px;
+  box-sizing: border-box;
+}
+
 .polaroid-pin {
   display: flex;
   flex-direction: column;
